feat(Operations): implemented endpoint to return all operations
